--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_code_view">CodeViewActivity</string>
+    <string name="ok">OK</string>
+    <string name="title_activity_custom_view">CustomViewActivity</string>
 </resources>
