--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_code_view">CodeViewActivity</string>
     <string name="ok">OK</string>
     <string name="title_activity_custom_view">CustomViewActivity</string>
+    <string name="title_activity_gallary">GallaryActivity</string>
 </resources>
