--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_configuration_test">ConfigurationTestActivity</string>
     <string name="title_activity_call_prime">CallPrimeActivity</string>
     <string name="title_activity_async_task_test">AsyncTaskTest</string>
+    <string name="title_activity_intent_test">IntentTest</string>
 </resources>
